Revision history for DBIx::Class

        - current_source_alias method on ResultSet objects to
          determine the alias to use in programatically assembled
          search()es (originally added in 0.08100 but unmentioned)

0.08121 2010-04-11 18:43:00 (UTC)
        - Support for Firebird RDBMS with DBD::InterBase and ODBC
        - Add core support for INSERT RETURNING (for storages that
          supports this syntax, currently PostgreSQL and Firebird)
        - Fix spurious warnings on multiple UTF8Columns component loads
        - DBIx::Class::UTF8Columns entered deprecated state
        - DBIx::Class::InflateColumn::File entered deprecated state
        - DBIx::Class::Optional::Dependencies left experimental state
        - Add req_group_list to Opt::Deps (RT#55211)
        - Add support for mysql-specific STRAIGHT_JOIN (RT#55579)
        - Cascading delete/update are now wrapped in a transaction
          for atomicity
        - Fix accidental autovivification of ENV vars
        - Fix update_all and delete_all to be wrapped in a transaction
        - Fix multiple deficiencies when using MultiCreate with
          data-encoder components (e.g. ::EncodedColumn)
        - Fix regression where SQL files with comments were not
          handled properly by ::Schema::Versioned.
        - Fix regression on not properly throwing when $obj->relationship
          is unresolvable
        - Fix the join-optimiser to consider unqualified column names
          whenever possible
        - Fix an issue with multiple same-table joins confusing the join
          optimizier
        - Add has_relationship method to row objects
        - Fix regression in set_column on PK-less objects
        - Better error text on malformed/missing relationships
        - Add POD about the significance of PK columns
        - Fix for SQLite to ignore the (unsupported) { for => ... }
          attribute
        - Fix ambiguity in default directory handling of create_ddl_dir